# ComfyUI-BAGEL-Hugo

./: README.md  README_EN.md  __init__.py  func.py  nodes_map.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
BAGEL/: inferencer.py
example_workflows/: image2text.json  imageEdit.json
nodes/: bagelByHugo.py
